# Generated by Django 4.2.13 on 2024-06-18 12:04

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ("auth", "0012_alter_user_first_name_max_length"),
    ]

    operations = [
        migrations.CreateModel(
            name="User",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("password", models.CharField(max_length=128, verbose_name="password")),
                (
                    "last_login",
                    models.DateTimeField(
                        blank=True, null=True, verbose_name="last login"
                    ),
                ),
                (
                    "account_id",
                    models.CharField(
                        max_length=10, unique=True, verbose_name="account_id"
                    ),
                ),
                (
                    "email",
                    models.EmailField(
                        max_length=254, unique=True, verbose_name="email"
                    ),
                ),
                (
                    "first_name",
                    models.CharField(
                        max_length=150, null=True, verbose_name="first_name"
                    ),
                ),
                (
                    "last_name",
                    models.CharField(
                        max_length=150, null=True, verbose_name="last_name"
                    ),
                ),
                (
                    "contact_address",
                    models.CharField(
                        max_length=150, null=True, verbose_name="contact_address"
                    ),
                ),
                (
                    "level",
                    models.IntegerField(blank=True, null=True, verbose_name="level"),
                ),
                ("done", models.BooleanField(default=False, verbose_name="done")),
                ("due", models.DateField(blank=True, null=True, verbose_name="due")),
                (
                    "is_superuser",
                    models.BooleanField(default=False, verbose_name="is_superuer"),
                ),
                (
                    "is_staff",
                    models.BooleanField(default=False, verbose_name="staff status"),
                ),
                ("is_active", models.BooleanField(default=True, verbose_name="active")),
                (
                    "created_at",
                    models.DateTimeField(auto_now_add=True, verbose_name="created_at"),
                ),
                (
                    "updated_at",
                    models.DateTimeField(auto_now=True, verbose_name="updateded_at"),
                ),
                (
                    "groups",
                    models.ManyToManyField(
                        blank=True,
                        help_text="The groups this user belongs to. A user will get all permissions granted to each of their groups.",
                        related_name="user_set",
                        related_query_name="user",
                        to="auth.group",
                        verbose_name="groups",
                    ),
                ),
                (
                    "user_permissions",
                    models.ManyToManyField(
                        blank=True,
                        help_text="Specific permissions for this user.",
                        related_name="user_set",
                        related_query_name="user",
                        to="auth.permission",
                        verbose_name="user permissions",
                    ),
                ),
            ],
            options={
                "abstract": False,
            },
        ),
    ]
